--- a/demo2/index.html
+++ b/demo2/index.html
@@ -31,11 +31,11 @@
 	<script type="text/javascript" src="share42/share42.js"></script>
 	<script type="text/javascript" src="http://vk.com/js/api/openapi.js?115"></script>
 	<script type="text/javascript">
-		VK.Widgets.Group("vk_groups", {mode: 0, width: "245", height: "340", color1: 'FFFFFF', color2: '2B587A', color3: '5B7FA6'}, 20003922);
+		VK.Widgets.Group("vk_groups", {mode: 0, width: "246", height: "305", color1: 'FFFFFF', color2: '2B587A', color3: '5B7FA6'}, 20003922);
 	</script>
-	<script type="text/javascript">
+	<!---<script type="text/javascript">
 		VK.Widgets.Subscribe("vk_subscribe", {mode: 2, soft: 1}, 145030);
-	</script>
+	</script>-->
 	<script type="text/javascript" src="Parallax/js/side-nav.js"              ></script>
 	<script type="text/javascript" src="Parallax/js/backgrounds.js"           ></script>
 	<script type="text/javascript" src="Parallax/js/kinetics.js"              ></script>
@@ -623,10 +623,14 @@
 		<div id="innerfoo">
 			<div id="footoppart">
 				<div class="text81"><img src="images/slide8/text81.png" alt="" title=""/></div>
-				<div id="vk_groups">
-					<div class="hend"><img src="images/slide8/hand.png" alt="" title=""/></div>
+				<div class="img-groups">
+					<div class="ph"><img  src="images/slide8/phone.png" alt="" title=""/></div>
+					<div class="hn"><img  src="images/slide8/hend.png" alt="" title=""/></div>
 				</div>
-				<div id="vk_subscribe"></div>
+				<div id="vk_groups">
+				</div>
+
+				<!--<div id="vk_subscribe"></div>-->
 
 				<div class="text82"><p>Если вы не готовы пока сделать заказ, но в мыслях и<br>
 					перспективе вы хотели бы с нами поработать вступайте</br>
