--- a/demo2/index.html
+++ b/demo2/index.html
@@ -66,7 +66,7 @@
 		<div class="modal-close arcticmodal-close"></div>
 		<div class="modal-content-box">
 			<legend>ОФОРМЛЕНИЕ ЗАЯВКИ</legend>
-			<form action="" method="get" name="form-1">
+			<form action="" method="get" name="feedback_form">
 				<div class="input-prepend">
 					<span class="add-on"><i class="icon-user">Ф.И.О. контактного лица:<span class="red"> *</span></i></span>
 					<input class="input-medium focused" name="name" type="text" placeholder="">
@@ -100,7 +100,7 @@
                          document.getElementById('captcha').src='captcha/captcha.php?'+Math.random();
                        document.getElementById('captcha-form').focus();"
 				       id="change-image"><img class="renew" src="images/pop-up/re.png" alt="" /><span>Плохо видно?<br> Обновите картинку</span></a>
-				<img src="captcha/captcha.php" id="captcha" />
+				<img class="cimg" src="captcha/captcha.php" id="captcha" />
 					<b>Введите символы<br> с картинки в это окно</b>
 				<input type="text" name="captcha" id="captcha-form" />
 				</div>
