--- a/demo2/index.html
+++ b/demo2/index.html
@@ -557,28 +557,29 @@
 			<div class="sliderfone">
 				<div class="text73"><img src="images/slide7/text72.png" alt="" title=""/></div>
 				<div class="bushback"><img src="images/slide7/backbush.png" alt="" title=""/></div>
-				<div id="pre-slider">
-					<ul id="slider-controls">
-						<li class="active">1</li>
-						<li>2</li>
-						<li>3</li>
-						<li>4</li>
-						<li>5</li>
-						<li>6</li>
-						<li>7</li>
-						<li>8</li>
-						<li>9</li>
-						<li>10</li>
-						<li>11</li>
-						<li>12</li>
-						<li>13</li>
-						<li>14</li>
-						<li>15</li>
-						<li>16</li>
-						<li>17</li>
-					</ul>
-				</div>
-				<div class="monitorfone"><img src="images/slide7/onlymonitor.png" alt="" title=""/></div>
+				<div class="lable-monitor"><img src="images/slide7/lable_monitor.png" alt="" title=""/></div>
+				<div id="slider-cover">
+					<div id="pre-slider">
+						<ul id="slider-controls">
+							<li class="active">1</li>
+							<li>2</li>
+							<li>3</li>
+							<li>4</li>
+							<li>5</li>
+							<li>6</li>
+							<li>7</li>
+							<li>8</li>
+							<li>9</li>
+							<li>10</li>
+							<li>11</li>
+							<li>12</li>
+							<li>13</li>
+							<li>14</li>
+							<li>15</li>
+							<li>16</li>
+							<li>17</li>
+						</ul>
+					</div>
 				<div class="simpslider slider-default">
 					<div class="mover">
 						<img src="images/slide7/slide1.png">
@@ -587,6 +588,9 @@
 					</div>
 				</div>
 				<div class="bushfront"><img src="images/slide7/frontbush.png" alt="" title=""/></div>
+				<div class="monitorfone"><img src="images/slide7/onlymonitor.png" alt="" title=""/></div>
+
+				</div>
 			</div>
 			<div class="totalbottomseven">
 
