--- a/demo2/index.html
+++ b/demo2/index.html
@@ -30,9 +30,9 @@
 	</script>
 	<script type="text/javascript" src="share42/share42.js"></script>
 	<script type="text/javascript" src="http://vk.com/js/api/openapi.js?115"></script>
-	<script type="text/javascript">
+	<!--<script type="text/javascript">
 		VK.Widgets.Group("vk_groups", {mode: 0, width: "246", height: "305", color1: 'FFFFFF', color2: '2B587A', color3: '5B7FA6'}, 20003922);
-	</script>
+	</script>-->
 	<!---<script type="text/javascript">
 		VK.Widgets.Subscribe("vk_subscribe", {mode: 2, soft: 1}, 145030);
 	</script>-->
@@ -46,13 +46,13 @@
 <body>
 
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<!--<script>(function(d, s, id) {
 	var js, fjs = d.getElementsByTagName(s)[0];
 	if (d.getElementById(id)) return;
 	js = d.createElement(s); js.id = id;
 	js.src = "http://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.0";
 	fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));</script>-->
 
 
 <!-- this is to make the page's vertical scrollbar appear the correct height -->
