--- a/demo2/index.html
+++ b/demo2/index.html
@@ -81,7 +81,7 @@
 				</div>
 				<div class="input-prepend">
 					<span class="add-on"><i class="icon-tarif">Интересующий тариф:</i></span>
-
+					<div class="select-cover">
 					<select class="span2" name="select">
 						<option value="">Выбрать по списку</option>
 						<option value="select-1">Пакет Lite</option>
@@ -89,7 +89,7 @@
 						<option value="select-3">Пакет Prestige</option>
 						<option value="select-4">Пакет PREMIUM</option>
 					</select>
-
+					</div>
 				</div>
 				<div class="input-prepend1">
 					<span class="add-on"><i class="icon-add">Дополнительно:</i></span>
@@ -158,7 +158,6 @@
 	</div>
 	<div class="footerslide1">
 		<a href="#intel"><span>Листать далее</span></a>
-		<div class="bottomheader"><img src="images/slide1/bottom.png" alt="" title=""/></div>
 	</div>
 </section>
 
