--- a/demo2/index.html
+++ b/demo2/index.html
@@ -628,7 +628,6 @@
 		<div id="innerfoo">
 			<div id="footoppart">
 				<div class="text81"><img src="images/slide8/text81.png" alt="" title=""/></div>
-
 				<div class="img-groups">
 					<div class="ph"><img  src="images/slide8/phone.png" alt="" title=""/></div>
 					<div class="hn"><img  src="images/slide8/hend.png" alt="" title=""/></div>
@@ -636,7 +635,7 @@
 				<div id="vk_groups">
 				</div>
 
-
+				<!--<div id="vk_subscribe"></div>-->
 
 				<div class="text82"><p>Если вы не готовы пока сделать заказ, но в мыслях и<br>
 					перспективе вы хотели бы с нами поработать вступайте</br>
@@ -689,7 +688,7 @@
 				</div>
 			</div>
 			<div class="socialnet">
-						<span class="innersocial">
+						<span>
 						МНЕ </span><div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
 				<span>! ПОКАЖИТЕ СТРАНИЦУ ДРУЗЬЯМ: </span><div class="share42init"></div>
 
