--- a/demo2/index.html
+++ b/demo2/index.html
@@ -17,6 +17,8 @@
 	<![endif]-->
 
 	<script type="text/javascript" src="Parallax/js/jquery-1.7.1.js"          ></script>
+    <script type="text/javascript" src="Parallax/js/rotate3Di/base.js"></script>
+    <script type="text/javascript" src="Parallax/js/rotate3Di/rotate3Di.js"></script>
 	<script type="text/javascript" src="Parallax/js/simpslider-dev.js"></script>
 	<script type="text/javascript" src="Parallax/js/jquery.jgrowl.js"></script>
 	<script type="text/javascript" src="Parallax/js/jquery.arcticmodal.js"></script>
